[metadata]
name = geocricket
description = Geospatial Critical Infrastructure and Census Data Stockpile Tool
author = Thad Haines
author_email = jthaine@sandia.gov
version = 1.0.1

[options]
install_requires =
    numpy==1.26.2
    pyproj==3.6.1
    shapely==2.0.5
    pandas==2.2.2
    geopandas==0.14.1
    bmi-arcgis-restapi==2.4.8
    simplekml==1.3.0
    fiona==1.9.6